# bible-bot-rust

./: .gitignore  Cargo.toml  README.md
.circleci/: config.yml
src/: bible_lookup.rs  err.rs  main.rs
src/bible_lookup/: constants.rs  err.rs  mod.rs  passage.rs  tests.rs
src/s3_access/: config.rs  constants.rs  err.rs  mod.rs  tests.rs
