[package]
name = "bible-bot-rust"
version = "0.1.0"
authors = ["Joel Clarke <joel.clarke273@gmail.com>"]
edition = "2018"

[dependencies]
failure = "0.1.5"
log = "0.4.8"
log-panics = "2.0.0"
orca = "0.7.0"
regex = "1.3.1"
reqwest = "0.9.21"
rust-s3 = "0.15.0"
serde = "1.0.101"
serde_json = "1.0.41"
simplelog ="0.7.3"
toml = "0.5.3"